# fps

./: CMakeLists.txt
include/glad/: glad.h
lib/assimp/cmake/: HunterGate.cmake
lib/assimp/cmake-modules/: Coveralls.cmake
lib/assimp/code/: CMakeLists.txt
lib/assimp/code/Importer/StepFile/: StepFileImporter.cpp
lib/assimp/contrib/irrXML/: CMakeLists.txt
lib/assimp/contrib/openddlparser/: CMakeLists.txt
lib/assimp/contrib/zlib/: CMakeLists.txt
lib/assimp/doc/: CMakeLists.txt
lib/assimp/port/AndroidJNI/: CMakeLists.txt
lib/assimp/samples/SimpleOpenGL/: CMakeLists.txt
lib/assimp/samples/SimpleTexturedOpenGL/: CMakeLists.txt
lib/assimp/test/: CMakeLists.txt
lib/assimp/test/headercheck/: CMakeLists.txt
lib/assimp/tools/assimp_cmd/: CMakeLists.txt
lib/assimp/tools/assimp_view/: CMakeLists.txt
models/fish/: ryba.mtl
models/seaweed/: glon.mtl
src/: glad.c  main.cpp
src/camera/: camera.cpp  camera.h
src/light/: directional_light.cpp  directional_light.h  light.cpp  light.h  light_type.h  point_light.cpp  point_light.h
src/model/: mesh.cpp  mesh.h  model.cpp  model.h
src/shader/: constant_f.glsl  constant_v.glsl  lambert_f.glsl  lambert_v.glsl  lamp_v.glsl  lighted_f.glsl  lighted_v.glsl  model_fragment.glsl  model_vertex.glsl  shader.cpp  shader.h  simple_f.glsl  simple_v.glsl  wavy_vertex.glsl
